HB-4260: Fix checkbox label alignment

--- a/src/styles/modules/_m-checkbox.sass
+++ b/src/styles/modules/_m-checkbox.sass
@@ -41,10 +41,17 @@
     @include rem-fallback('margin-left', 14px)
     justify-content: space-between
 
+    +m(size-tiny)
+      line-height: 14px
+
   +e(label)
     cursor: pointer
     vertical-align: middle
     line-height: 1em
+
+    +m(size-tiny)
+      line-height: 14px
+      font-size: 12px
 
   +e(label-right)
     cursor: pointer
